crates/syntax/tests/snapshots/tokenizer__lexer_comment.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: lex(input)
---
[
    SpannedToken {
        span: 0..1,
        token: Identifier(
            "a",
        ),
    },
    SpannedToken {
        span: 2..3,
        token: OperatorAssignment,
    },
    SpannedToken {
        span: 4..5,
        token: LiteralInt(
            "1",
        ),
    },
    SpannedToken {
        span: 6..16,
        token: SingleLineComment(
            "// comment",
        ),
    },
]
