crates/syntax/tests/snapshots/tokenizer__lexer_unclosed string.snap
---
source: crates/syntax/tests/tokenizer.rs
expression: lex(input)
---
[
    SpannedToken {
        span: 0..1,
        token: Identifier(
            "a",
        ),
    },
    SpannedToken {
        span: 2..3,
        token: OperatorAssignment,
    },
    SpannedToken {
        span: 4..5,
        token: Error(
            UnclosedString(
                4..5,
            ),
        ),
    },
    SpannedToken {
        span: 5..13,
        token: Identifier(
            "unclosed",
        ),
    },
    SpannedToken {
        span: 14..20,
        token: Identifier(
            "string",
        ),
    },
    SpannedToken {
        span: 20..21,
        token: SigilSemiColon,
    },
    SpannedToken {
        span: 26..27,
        token: Identifier(
            "b",
        ),
    },
    SpannedToken {
        span: 28..29,
        token: OperatorAssignment,
    },
    SpannedToken {
        span: 30..31,
        token: LiteralInt(
            "1",
        ),
    },
]
